# 2021-203

./: .gitignore  CMakeLists.txt  Makefile  README.md  akishevdv.cpp  akishevdv.h  chernovaaa.cpp  chernovaaa.h  dudorovdv.cpp  dudorovdv.h  gladyshevadn.cpp  gladyshevadn.h  gukovaim.cpp  guskovaim.h  inshakovaas.cpp  inshakovaas.h  katinda.cpp  katinda.h  kulaginpa.cpp  kulaginpa.h  main.cpp  maksimovso.cpp  maksimovso.h  nikulovia.cpp  nikulovia.h  osipovda.cpp  osipovda.h  parshindi.cpp  parshindi.h  potapkinayuyu.cpp  potapkinayuyu.h  rodkinada.cpp  rodkinada.h  ruzaevaas.cpp  ruzaevaas.h  shabanovdo.cpp  shabanovdo.h  svetilnikovdb.cpp  svetilnikovdb.h  taynovaa.cpp  (+14 more)
